--- a/IDE/v.02/modules/Tree/src/net/vdombox/ide/modules/tree/view/components/Body.mxml
+++ b/IDE/v.02/modules/Tree/src/net/vdombox/ide/modules/tree/view/components/Body.mxml
@@ -3,7 +3,8 @@
 		 xmlns:fx="http://ns.adobe.com/mxml/2009"
 		 xmlns:mx="library://ns.adobe.com/flex/halo"
 		 xmlns:s="library://ns.adobe.com/flex/spark"
-		 height="100%" width="100%">
+		 height="100%"
+		 width="100%">
 
 	<s:layout>
 
@@ -16,13 +17,20 @@
 	</fx:Script>
 
 	<components:WorkArea id="treeCanvas"
-						 height="100%" width="100%"/>
+						 height="100%"
+						 width="100%"/>
 
-	<s:VGroup height="100%" width="250"
-			  paddingBottom="5" paddingLeft="5" paddingRight="5" paddingTop="5">
+	<s:VGroup height="100%"
+			  width="250"
+			  paddingBottom="5"
+			  paddingLeft="5"
+			  paddingRight="5"
+			  paddingTop="5">
 
 		<components:LevelsFilterPanel id="levelsPanel"
-									  width="100%" height="100%"
-									  cornerRadius="5" skinClass="net.vdombox.ide.modules.tree.view.skins.PanelSkin"/>
+									  width="100%"
+									  height="100%"
+									  cornerRadius="5"
+									  skinClass="net.vdombox.ide.modules.tree.view.skins.PanelSkin"/>
 	</s:VGroup>
 </s:Group>
