--- a/IDE/v.02/modules/Tree/src/net/vdombox/ide/modules/tree/view/components/LevelsFilterPanel.mxml
+++ b/IDE/v.02/modules/Tree/src/net/vdombox/ide/modules/tree/view/components/LevelsFilterPanel.mxml
@@ -8,11 +8,11 @@
 	<fx:Script>
 		<![CDATA[
 			import mx.collections.ArrayList;
-			
+
 			import net.vdombox.ide.common.view.components.VDOMImage;
 			import net.vdombox.ide.modules.tree.events.LevelsFilterPanelEvent;
 			import net.vdombox.ide.modules.tree.model.vo.TreeLevelVO;
-			
+
 			import spark.events.IndexChangeEvent;
 
 			[Bindable]
@@ -27,8 +27,8 @@
 			public function set dataProvider( value : Array ) : void
 			{
 				levels = value && value.length > 0 ? new ArrayList( value ) : null;
-				
-				if( levels && levels.length > 0 )
+
+				if ( levels && levels.length > 0 )
 					currentStructureLevel = levels.getItemAt( 0 ) as TreeLevelVO;
 				else
 					currentStructureLevel = null;
@@ -75,7 +75,7 @@
 						}
 					}
 				}
-				
+
 				if ( !hasVisible && !selectAll )
 					selectAll = true;
 				else if ( hasVisible && selectAll )
@@ -86,31 +86,39 @@
 			{
 				structureLevelsList.addEventListener( Event.CHANGE, changeHandler, true, 0, true );
 			}
-			
 		]]>
 	</fx:Script>
-	
-	<s:Rect width="100%" height="100%">
+
+	<s:Rect width="100%"
+			height="100%">
 		<s:fill>
-			<s:BitmapFill source="{VDOMImage.Fon_Texture}" smooth="true" fillMode="repeat" />
+			<s:BitmapFill source="{VDOMImage.Fon_Texture}"
+						  smooth="true"
+						  fillMode="repeat"/>
 		</s:fill>
 	</s:Rect>
 
-	<s:Rect width="100%" height="25">
+	<s:Rect width="100%"
+			height="25">
 		<s:fill>
-			<s:SolidColor id="rectColor" color="#3A3A3A" />
+			<s:SolidColor id="rectColor"
+						  color="#3A3A3A"/>
 		</s:fill>
 	</s:Rect>
 
 	<s:HGroup id="switchAllGroup"
-			  height="25" width="100%"
-			  paddingLeft="3" paddingRight="3" verticalAlign="middle"
+			  height="25"
+			  width="100%"
+			  paddingLeft="3"
+			  paddingRight="3"
+			  verticalAlign="middle"
 			  click="switchAll()">
 
 		<mx:Image source="@Embed(source='assets/treeEditor/colored_button_all_levels.png')"/>
 
 		<s:Rect width="1"
-				bottom="3" top="3">
+				bottom="3"
+				top="3">
 
 			<s:fill>
 
@@ -118,27 +126,42 @@
 			</s:fill>
 		</s:Rect>
 
-		<s:Label text="{ selectAll ? resourceManager.getString( 'Tree_General', 'level_show_all' ) : resourceManager.getString( 'Tree_General', 'level_hide_all' ) }" 
-				 width="100%" color="#FFFFFF"/>
+		<s:Label text="{ selectAll ? resourceManager.getString( 'Tree_General', 'level_show_all' ) : resourceManager.getString( 'Tree_General', 'level_hide_all' ) }"
+				 width="100%"
+				 color="#FFFFFF"/>
 	</s:HGroup>
 
-	<s:Line top="-2" left="-2" width="100%">
+	<s:Line top="-2"
+			left="-2"
+			width="100%">
 		<s:stroke>
-			<s:SolidColorStroke color="#FFFFFF" alpha="0.5" weight="1" />
+			<s:SolidColorStroke color="#FFFFFF"
+								alpha="0.5"
+								weight="1"/>
 		</s:stroke>
 	</s:Line>
-	
-	<s:Line top="27" left="-2" width="100%">
-		<s:stroke>
-			<s:SolidColorStroke color="#000000" alpha="0.5" weight="1" />
-		</s:stroke>
-	</s:Line>
-	
-		
-	<s:List id="structureLevelsList"
-			dataProvider="{ levels }" height="100%" width="100%" y="25" change="changeHandler( event )"
-			borderVisible="false" itemRenderer="{ new ClassFactory( StructureLevelItemRenderer ) }" selectedItem="@{ _currentStructuretLevel }"
-			contentBackgroundAlpha="0" />
 
-	
+	<s:Line top="27"
+			left="-2"
+			width="100%">
+		<s:stroke>
+			<s:SolidColorStroke color="#000000"
+								alpha="0.5"
+								weight="1"/>
+		</s:stroke>
+	</s:Line>
+
+
+	<s:List id="structureLevelsList"
+			dataProvider="{ levels }"
+			height="100%"
+			width="100%"
+			y="25"
+			change="changeHandler( event )"
+			borderVisible="false"
+			itemRenderer="{ new ClassFactory( StructureLevelItemRenderer ) }"
+			selectedItem="@{ _currentStructuretLevel }"
+			contentBackgroundAlpha="0"/>
+
+
 </s:Panel>
