--- a/IDE/v.02/modules/Tree/src/net/vdombox/ide/modules/tree/view/skins/CopyofTreeElementSkin.mxml
+++ b/IDE/v.02/modules/Tree/src/net/vdombox/ide/modules/tree/view/skins/CopyofTreeElementSkin.mxml
@@ -9,85 +9,109 @@
 
 	<s:states>
 
-		<s:State name="normal" stateGroups="normalGroup, unselectedGroup" />
+		<s:State name="normal"
+				 stateGroups="normalGroup, unselectedGroup"/>
 
-		<s:State name="normalSelected" stateGroups="normalGroup, selectedGroup" />
+		<s:State name="normalSelected"
+				 stateGroups="normalGroup, selectedGroup"/>
 
-		<s:State name="minimized" stateGroups="minimizedGroup, unselectedGroup" />
+		<s:State name="minimized"
+				 stateGroups="minimizedGroup, unselectedGroup"/>
 
-		<s:State name="minimizedSelected" stateGroups="minimizedGroup, selectedGroup" />
+		<s:State name="minimizedSelected"
+				 stateGroups="minimizedGroup, selectedGroup"/>
 
-		<s:State name="disabled" stateGroups="normalGroup, unselectedGroup" />
+		<s:State name="disabled"
+				 stateGroups="normalGroup, unselectedGroup"/>
 	</s:states>
 
 	<s:Group id="topMask"
-			 bottom="1" left="1" right="1" top="1">
+			 bottom="1"
+			 left="1"
+			 right="1"
+			 top="1">
 
-		<s:Rect height="100%" width="100%"
-				radiusX="7" radiusY="7">
+		<s:Rect height="100%"
+				width="100%"
+				radiusX="7"
+				radiusY="7">
 
 			<s:fill>
 
-				<s:SolidColor color="0x66FF66" />
+				<s:SolidColor color="0x66FF66"/>
 			</s:fill>
 		</s:Rect>
 	</s:Group>
 
-	<s:Group height="12" x="7" y="-12">
+	<s:Group height="12"
+			 x="7"
+			 y="-12">
 
-		<s:Rect height="100%" width="70">
+		<s:Rect height="100%"
+				width="70">
 
 			<s:fill>
 
-				<s:BitmapFill source="@Embed(source='assets/treeEditor/treeEditor.swf', symbol='menu')" />
+				<s:BitmapFill source="@Embed(source='assets/treeEditor/treeEditor.swf', symbol='menu')"/>
 			</s:fill>
 		</s:Rect>
 
-		<s:Group x="5" verticalCenter="0">
+		<s:Group x="5"
+				 verticalCenter="0">
 
 			<s:layout>
 
-				<s:HorizontalLayout />
+				<s:HorizontalLayout/>
 			</s:layout>
 
 			<mx:Image id="minimizeButton"
-					  buttonMode="true" height="10"
+					  buttonMode="true"
+					  height="10"
 					  source.minimizedGroup="@Embed(source='assets/treeEditor/treeEditor.swf', symbol='plus')"
 					  source.normalGroup="@Embed(source='assets/treeEditor/treeEditor.swf', symbol='minus')"
-					  width="10" />
+					  width="10"/>
 
 			<mx:Image id="createLineButton"
-					  buttonMode="true" height="10"
+					  buttonMode="true"
+					  height="10"
 					  source="@Embed(source='assets/treeEditor/treeEditor.swf', symbol='line')"
-					  width="10" />
+					  width="10"/>
 
 			<mx:Image id="deleteButton"
-					  buttonMode="true" height="10"
+					  buttonMode="true"
+					  height="10"
 					  source="@Embed(source='assets/treeEditor/treeEditor.swf', symbol='delete')"
-					  width="10" />
+					  width="10"/>
 
 			<mx:Image id="setStartPageButton"
-					  buttonMode="true" height="10"
+					  buttonMode="true"
+					  height="10"
 					  source="@Embed(source='assets/treeEditor/treeEditor.swf', symbol='start_page')"
-					  width="10" />
+					  width="10"/>
 		</s:Group>
 	</s:Group>
 
-	<s:Group height="100%" width="100%"
+	<s:Group height="100%"
+			 width="100%"
 			 mask="{ topMask }">
 
-		<s:Rect bottom="0" left="0" right="0" top="0">
+		<s:Rect bottom="0"
+				left="0"
+				right="0"
+				top="0">
 
 			<s:fill>
 
-				<s:SolidColor color="white" />
+				<s:SolidColor color="white"/>
 			</s:fill>
 		</s:Rect>
 
 		<s:Group id="header"
-				 height="30" width="100%">
+				 height="30"
+				 width="100%">
 
-			<s:Rect height="100%" width="100%">
+			<s:Rect height="100%"
+					width="100%">
 
 				<s:fill>
 
@@ -95,46 +119,63 @@
 
 						<mx:entries>
 
-							<mx:GradientEntry color="0xcccccc" ratio="0.0" />
+							<mx:GradientEntry color="0xcccccc"
+											  ratio="0.0"/>
 
-							<mx:GradientEntry color="0x151515" ratio="0.7" />
+							<mx:GradientEntry color="0x151515"
+											  ratio="0.7"/>
 
-							<mx:GradientEntry color="0x151515" ratio="1" />
+							<mx:GradientEntry color="0x151515"
+											  ratio="1"/>
 						</mx:entries>
 					</mx:LinearGradient>
 				</s:fill>
 			</s:Rect>
 
-			<s:HGroup width="100%" top="4">
+			<s:HGroup width="100%"
+					  top="4">
 
-				<mx:Image height="25" source="{ hostComponent.typeResource.data }" width="25" />
+				<mx:Image height="25"
+						  source="{ hostComponent.typeResource.data }"
+						  width="25"/>
 
-				<s:Label text="{ hostComponent.title }" color="#FFFFFF" />
+				<s:Label text="{ hostComponent.title }"
+						 color="#FFFFFF"/>
 			</s:HGroup>
 		</s:Group>
 
-		<s:HGroup height="100%" width="100%"
+		<s:HGroup height="100%"
+				  width="100%"
 				  top="30"
 				  excludeFrom="minimizedGroup">
 
-			<mx:Image height="80" source="{ hostComponent.pageResource.data }" width="80" />
+			<mx:Image height="80"
+					  source="{ hostComponent.pageResource.data }"
+					  width="80"/>
 
-			<s:VGroup height="100%" width="100%">
+			<s:VGroup height="100%"
+					  width="100%">
 
-				<s:RichText height="47" text="{ hostComponent.description }" width="100%" />
+				<s:RichText height="47"
+							text="{ hostComponent.description }"
+							width="100%"/>
 
-				<s:Label text="{ hostComponent.typeName }" width="100%" />
+				<s:Label text="{ hostComponent.typeName }"
+						 width="100%"/>
 			</s:VGroup>
 		</s:HGroup>
 	</s:Group>
 
-	<s:Rect height="100%" width="100%"
-			radiusX="7" radiusY="7">
+	<s:Rect height="100%"
+			width="100%"
+			radiusX="7"
+			radiusY="7">
 
 		<s:stroke>
 
-			<s:SolidColorStroke color.selectedGroup="white" color.unselectedGroup="gray"
-								weight="2" />
+			<s:SolidColorStroke color.selectedGroup="white"
+								color.unselectedGroup="gray"
+								weight="2"/>
 		</s:stroke>
 	</s:Rect>
 </s:SparkSkin>
