--- a/IDE/v.02/modules/Tree/src/net/vdombox/ide/modules/tree/view/skins/PanelSkin.mxml
+++ b/IDE/v.02/modules/Tree/src/net/vdombox/ide/modules/tree/view/skins/PanelSkin.mxml
@@ -18,9 +18,11 @@
 -->
 <s:SparkSkin xmlns:fx="http://ns.adobe.com/mxml/2009"
 			 xmlns:s="library://ns.adobe.com/flex/spark"
-			 
-			 minHeight="127" minWidth="131"
-			 alpha.disabled="0.5" blendMode="normal" mouseEnabled="false">
+			 minHeight="127"
+			 minWidth="131"
+			 alpha.disabled="0.5"
+			 blendMode="normal"
+			 mouseEnabled="false">
 
 	<fx:Metadata>
 		<![CDATA[ 
@@ -32,8 +34,10 @@
 	</fx:Metadata>
 
 	<fx:Script>
-		/* Define the skin elements that should not be colorized.
-		 For panel, border and title backround are skinned, but the content area and title text are not. */
+		/*
+		   Define the skin elements that should not be colorized.
+		   For panel, border and title backround are skinned, but the content area and title text are not.
+		 */
 		static private const exclusions : Array = [ "background", "titleDisplay", "contentGroup" ];
 
 		/**
@@ -75,85 +79,124 @@
 
 	<s:states>
 
-		<s:State name="normal" />
+		<s:State name="normal"/>
 
-		<s:State name="disabled" />
+		<s:State name="disabled"/>
 
-		<s:State name="normalWithControlBar" stateGroups="withControls" />
+		<s:State name="normalWithControlBar"
+				 stateGroups="withControls"/>
 
-		<s:State name="disabledWithControlBar" stateGroups="withControls" />
+		<s:State name="disabledWithControlBar"
+				 stateGroups="withControls"/>
 	</s:states>
 	<!-- drop shadow can't be hittable so it stays sibling of other graphics -->
 
 	<s:RectangularDropShadow id="dropShadow"
-							 bottom="0" color="#000000" left="0" right="0" top="0"
-							 alpha="0.32" angle="90" blRadius="0" blRadius.withControls="{cornerRadius}"
-							 blurX="20" blurY="20" brRadius="0" brRadius.withControls="{cornerRadius}"
-							 distance="11" tlRadius="{cornerRadius}" trRadius="{cornerRadius}" />
+							 bottom="0"
+							 color="#000000"
+							 left="0"
+							 right="0"
+							 top="0"
+							 alpha="0.32"
+							 angle="90"
+							 blRadius="0"
+							 blRadius.withControls="{cornerRadius}"
+							 blurX="20"
+							 blurY="20"
+							 brRadius="0"
+							 brRadius.withControls="{cornerRadius}"
+							 distance="11"
+							 tlRadius="{cornerRadius}"
+							 trRadius="{cornerRadius}"/>
 	<!-- drop shadow can't be hittable so all other graphics go in this group -->
 
-	<s:Group bottom="0" left="0" right="0" top="0">
+	<s:Group bottom="0"
+			 left="0"
+			 right="0"
+			 top="0">
 		<!-- top group mask -->
 
 		<s:Group id="topGroupMask"
-				 bottom="1" left="1" right="1" top="1">
+				 bottom="1"
+				 left="1"
+				 right="1"
+				 top="1">
 
-			<s:Rect bottom="0" left="0" right="0" top="0">
+			<s:Rect bottom="0"
+					left="0"
+					right="0"
+					top="0">
 
 				<s:fill>
 
-					<s:SolidColor alpha="0" />
+					<s:SolidColor alpha="0"/>
 				</s:fill>
 			</s:Rect>
 		</s:Group>
 		<!-- bottom group mask -->
 
 		<s:Group id="bottomGroupMask"
-				 bottom="1" left="1" right="1" top="1"
+				 bottom="1"
+				 left="1"
+				 right="1"
+				 top="1"
 				 includeIn="normalWithControlBar, disabledWithControlBar">
 
-			<s:Rect bottom="0" left="0" right="0" top="0">
+			<s:Rect bottom="0"
+					left="0"
+					right="0"
+					top="0">
 
 				<s:fill>
 
-					<s:SolidColor alpha="0" />
+					<s:SolidColor alpha="0"/>
 				</s:fill>
 			</s:Rect>
 		</s:Group>
 		<!-- layer 1: border -->
 
 		<s:Rect id="border"
-				bottom="0" left="0" right="0" top="0">
+				bottom="0"
+				left="0"
+				right="0"
+				top="0">
 
 			<s:stroke>
 
 				<s:SolidColorStroke color="{getStyle('borderColor')}"
-									alpha="{getStyle('borderAlpha')}" weight="1" />
+									alpha="{getStyle('borderAlpha')}"
+									weight="1"/>
 			</s:stroke>
 		</s:Rect>
 		<!-- layer 2: background fill -->
 		<!--- Defines the appearance of the PanelSkin class's background. -->
 
 		<s:Rect id="background"
-				bottom="1" left="1" right="1" top="1">
+				bottom="1"
+				left="1"
+				right="1"
+				top="1">
 
 			<s:fill>
 				<!-- Defines the  PanelSkin class's background fill. The default color is 0xFFFFFF. -->
 
 				<s:SolidColor color="{getStyle('backgroundColor')}"
-							  alpha="{getStyle('backgroundAlpha')}" />
+							  alpha="{getStyle('backgroundAlpha')}"/>
 			</s:fill>
 		</s:Rect>
 		<!-- layer 3: contents -->
 		<!--- contains the vertical stack of titlebar content and controlbar -->
 
 		<s:Group id="contents"
-				 bottom="1" left="1" right="1" top="1">
+				 bottom="1"
+				 left="1"
+				 right="1"
+				 top="1">
 
 			<s:layout>
 
 				<s:VerticalLayout horizontalAlign="justify"
-								  gap="0" />
+								  gap="0"/>
 			</s:layout>
 
 			<s:Group id="topGroup"
@@ -161,7 +204,10 @@
 				<!-- layer 0: title bar fill -->
 
 				<s:Rect id="tbFill"
-						bottom="0" left="0" right="0" top="0">
+						bottom="0"
+						left="0"
+						right="0"
+						top="0">
 					<s:fill>
 						<s:LinearGradient rotation="90">
 							<s:GradientEntry color="#B70000"/>
@@ -169,22 +215,36 @@
 						</s:LinearGradient>
 					</s:fill>
 				</s:Rect>
-				
+
 				<s:Label id="titleDisplay"
-						 top="7" color="white" left="3" right="3" paddingLeft="10"
-						 textAlign="left" verticalAlign="middle" paddingBottom="6"
-						 maxDisplayedLines="1" fontSize="15" fontWeight="bold">
+						 top="7"
+						 color="white"
+						 left="3"
+						 right="3"
+						 paddingLeft="10"
+						 textAlign="left"
+						 verticalAlign="middle"
+						 paddingBottom="6"
+						 maxDisplayedLines="1"
+						 fontSize="15"
+						 fontWeight="bold">
 				</s:Label>
-				
-				<s:Line top="0" width="100%">
+
+				<s:Line top="0"
+						width="100%">
 					<s:stroke>
-						<s:SolidColorStroke color="#FFFFFF" alpha="0.2" weight="1"/>
+						<s:SolidColorStroke color="#FFFFFF"
+											alpha="0.2"
+											weight="1"/>
 					</s:stroke>
 				</s:Line>
-				
-				<s:Line bottom="0" width="100%">
+
+				<s:Line bottom="0"
+						width="100%">
 					<s:stroke>
-						<s:SolidColorStroke color="#000000" alpha="0.2" weight="1"/>
+						<s:SolidColorStroke color="#000000"
+											alpha="0.2"
+											weight="1"/>
 					</s:stroke>
 				</s:Line>
 			</s:Group>
@@ -195,14 +255,21 @@
 			-->
 
 			<s:Group id="contentGroup"
-					 height="100%" minHeight="0" minWidth="0" width="100%">
+					 height="100%"
+					 minHeight="0"
+					 minWidth="0"
+					 width="100%">
 			</s:Group>
 
 			<s:Group id="bottomGroup"
-					 minHeight="0" minWidth="0"
+					 minHeight="0"
+					 minWidth="0"
 					 includeIn="normalWithControlBar, disabledWithControlBar">
 
-				<s:Group bottom="0" left="0" right="0" top="0"
+				<s:Group bottom="0"
+						 left="0"
+						 right="0"
+						 top="0"
 						 mask="{bottomGroupMask}">
 					<!-- layer 0: control bar divider line -->
 					<!--<s:Rect left="0" right="0" top="0" height="1" alpha="0.22">
@@ -212,25 +279,32 @@
 						 </s:Rect>-->
 					<!-- layer 1: control bar highlight -->
 
-					<s:Rect bottom="0" left="0" right="0" top="1">
+					<s:Rect bottom="0"
+							left="0"
+							right="0"
+							top="1">
 
 						<s:stroke>
 
-							<s:LinearGradientStroke rotation="90" weight="1">
+							<s:LinearGradientStroke rotation="90"
+													weight="1">
 
-								<s:GradientEntry color="0xE5E5E5" />
+								<s:GradientEntry color="0xE5E5E5"/>
 
-								<s:GradientEntry color="0xD8D8D8" />
+								<s:GradientEntry color="0xD8D8D8"/>
 							</s:LinearGradientStroke>
 						</s:stroke>
 					</s:Rect>
 					<!-- layer 2: control bar fill -->
 
-					<s:Rect bottom="1" left="1" right="1" top="2">
+					<s:Rect bottom="1"
+							left="1"
+							right="1"
+							top="2">
 
 						<s:fill>
 
-							<s:SolidColor color="0xD4D4D4" />
+							<s:SolidColor color="0xD4D4D4"/>
 							<!--<s:LinearGradient rotation="90">
 								 <s:GradientEntry color="0xDADADA" />
 								 <s:GradientEntry color="0xC5C5C5" />
@@ -241,12 +315,16 @@
 				<!-- layer 3: control bar -->
 
 				<s:Group id="controlBarGroup"
-						 minHeight="0" minWidth="0"
-						 bottom="1" left="0" right="0" top="1">
+						 minHeight="0"
+						 minWidth="0"
+						 bottom="1"
+						 left="0"
+						 right="0"
+						 top="1">
 
 					<s:layout>
 
-						<s:HorizontalLayout gap="1" />
+						<s:HorizontalLayout gap="1"/>
 					</s:layout>
 				</s:Group>
 			</s:Group>
